--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 
 # Core Framework
 Django>=4.2,<5.0
+djangorestframework == 3.15.2
 
 # Environment Variables
 python-dotenv>=1.0.0
@@ -18,4 +19,3 @@ Pillow>=10.0.0
 
 # Development Dependencies
 # django-debug-toolbar>=4.0.0
-
