--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ cryptography>=41.0.0
 
 # Production Dependencies (uncomment when needed)
 # gunicorn>=21.0.0
-# psycopg2-binary>=2.9.0  # PostgreSQL adapter
+psycopg2-binary>=2.9.0  # PostgreSQL adapter
 # django-redis>=5.4.0  # Redis cache backend
 
 # Development Dependencies
