Enhance authentication and user experience features
- Added `djangorestframework-simplejwt` to `requirements.txt` for JWT authentication support.
- Updated GitHub Actions linting workflow to apply to all branches.
- Integrated authentication modals and member section in the main layout, allowing users to sign in, view profiles, and log out.
- Implemented email verification routes and views in the Django backend, enhancing user registration flow.
- Improved admin interface for verification requests, displaying clickable verification links and tokens for easier management.
- Enhanced email and SMS notification logging for better visibility during development.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: Code Style Check
 
 on:
   push:
-    branches: [main, master, develop]
+    branches: ["**"]
   pull_request:
-    branches: [main, master, develop]
+    branches: ["**"]
 
 jobs:
   # Python (Django Backend) Linting
