--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 # Core Framework
 Django>=4.2,<5.0
 djangorestframework == 3.15.2
+djangorestframework-simplejwt>=5.3.0
 
 # Environment Variables
 python-dotenv>=1.0.0
