Add media management and cloud storage support
- Updated `requirements.txt` to include `django-storages` and `boto3` for S3/R2/OSS compatibility.
- Enhanced `base.py` and `prod.py` settings for cloud storage configuration, including a new `STORAGES` dictionary.
- Introduced media upload and library views in `urls.py` and corresponding admin integration.
- Implemented a new media modal in the admin interface for image uploads and selection.
- Refactored the `PageComponent` admin to support a CodeMirror-based editor for HTML, CSS, and JavaScript with live preview functionality.
- Improved styling and layout for the admin interface, including responsive adjustments and drag-and-drop upload support.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ openpyxl>=3.1.0
 # Cryptography (RSA key generation)
 cryptography>=41.0.0
 
+# Storage Backend (S3/R2/OSS compatible)
+django-storages[s3]>=1.14.2
+boto3>=1.34.0
+
 # Production Dependencies (uncomment when needed)
 # gunicorn>=21.0.0
 psycopg2-binary>=2.9.0  # PostgreSQL adapter
