--- a/pages/package.json
+++ b/pages/package.json
@@ -13,7 +13,11 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
