--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,7 @@
 name: Code Style Check
 
 on:
-  push:
-    branches: [main, master]
-  pull_request:
+  workflow_call:
 
 jobs:
   # Python (Django Backend) Linting
