--- a/src/.env.example
+++ b/src/.env.example
@@ -1,90 +1,35 @@
-# ================================================
-# Django Backend Environment Variables
-# ================================================
-# Copy this file to .env and fill in the values
+# Django Settings
+DJANGO_SECRET_KEY=change-me-in-production
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DEBUG=False
 
-# ------------------------------------------------
-# Django Core Settings
-# ------------------------------------------------
-
-# Django Secret Key (REQUIRED for production)
-# Generate a new key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
-DJANGO_SECRET_KEY=your-secret-key-here
-
-# Django Settings Module
-# Options: core.settings.dev | core.settings.prod
-DJANGO_ENV=dev
-
-# Allowed Hosts (comma-separated, for production)
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
-
-# Debug Mode (set to False in production)
-DJANGO_DEBUG=True
-
-# ------------------------------------------------
-# Database Configuration
-# ------------------------------------------------
-
-# Database Engine
-# Options: django.db.backends.postgresql | django.db.backends.mysql | django.db.backends.sqlite3
+# Database Settings
 DB_ENGINE=django.db.backends.postgresql
-
-# Database Name
 DB_NAME=innovate_to_grow
-
-# Database User
-DB_USER=postgres
-
-# Database Password
-DB_PASSWORD=your-db-password
-
-# Database Host
+DB_USER=user
+DB_PASSWORD=password
 DB_HOST=localhost
-
-# Database Port (PostgreSQL: 5432, MySQL: 3306)
 DB_PORT=5432
 
-# ------------------------------------------------
-# Email Configuration (for production)
-# ------------------------------------------------
+# AWS Settings (Optional - for S3 storage)
+# AWS_STORAGE_BUCKET_NAME=your-bucket-name
+# AWS_ACCESS_KEY_ID=your-access-key
+# AWS_SECRET_ACCESS_KEY=your-secret-key
+# AWS_S3_REGION_NAME=us-east-1
+# AWS_S3_ENDPOINT_URL=
+# AWS_S3_CUSTOM_DOMAIN=
 
-# SMTP Host
+# Email Settings
 EMAIL_HOST=smtp.gmail.com
-
-# SMTP Port (587 for TLS, 465 for SSL)
 EMAIL_PORT=587
-
-# Email Username
-EMAIL_HOST_USER=your-email@gmail.com
-
-# Email Password (use App Password for Gmail)
-EMAIL_HOST_PASSWORD=your-app-password
-
-# Default From Email
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
 DEFAULT_FROM_EMAIL=noreply@innovatetogrow.com
 
-# ------------------------------------------------
-# Redis Configuration (optional, for caching)
-# ------------------------------------------------
+# Notification Providers
+# Options: console, sendgrid, twilio, etc.
+EMAIL_PROVIDER=console
+SMS_PROVIDER=console
 
-# Redis URL
-REDIS_URL=redis://127.0.0.1:6379/1
-
-# ------------------------------------------------
-# AWS Configuration (optional, for S3 storage)
-# ------------------------------------------------
-
-# AWS_ACCESS_KEY_ID=your-aws-access-key
-# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-# AWS_STORAGE_BUCKET_NAME=your-bucket-name
-# AWS_S3_REGION_NAME=us-west-2
-
-# ------------------------------------------------
-# Other Settings
-# ------------------------------------------------
-
-# Site URL (for generating absolute URLs)
-SITE_URL=http://localhost:8000
-
-# Timezone
-TZ=UTC
+# Redis (Optional)
+# REDIS_URL=redis://127.0.0.1:6379/1
