Refactor: Finalize layout app merge into pages app
- Removed the deprecated `layout` app and migrated all related models, migrations, and configurations into the `pages` app.
- Updated settings, URLs, and imports to reflect the removal of the `layout` app.
- Enhanced the `PageComponent` system with a new `PageComponentAsset` model for managing various asset types.
- Improved admin interfaces and templates for better usability and integration.
- Added health check endpoint and updated caching mechanisms for improved performance.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ ignore = [
 "tests.py" = ["F841"]
 
 [tool.ruff.lint.isort]
-known-first-party = ["core", "authn", "pages", "layout", "notify", "events", "mobileid", "sheets"]
+known-first-party = ["core", "authn", "pages", "notify", "events", "mobileid", "sheets"]
 
 [tool.ruff.format]
 # Use double quotes
