Implement Google Sheet PageComponent

--- a/src/.env.example
+++ b/src/.env.example
@@ -33,3 +33,10 @@ SMS_PROVIDER=console
 
 # Redis (Optional)
 # REDIS_URL=redis://127.0.0.1:6379/1
+
+# Frontend URL (for Live Preview)
+# FRONTEND_URL=https://www.innovatetogrow.com
+
+# Google Sheets (service account JSON as a single-line JSON string)
+# GOOGLE_SHEETS_CREDENTIALS_JSON={"type":"service_account",...}
+# GOOGLE_SHEETS_SCOPES=https://www.googleapis.com/auth/spreadsheets.readonly
