--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -18,6 +18,10 @@ Pillow>=10.0.0
 # Excel Import/Export
 openpyxl>=3.1.0
 
+# Google APIs
+google-api-python-client>=2.170.0
+google-auth>=2.35.0
+
 # Cryptography (RSA key generation)
 cryptography>=41.0.0
 
@@ -33,4 +37,3 @@ django-redis>=5.4.0  # Redis cache backend
 # Development Dependencies
 # django-debug-toolbar>=4.0.0
 ruff>=0.8.0  # Python linter and formatter
-
