--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -9,6 +9,10 @@ on:
       - ".github/workflows/deploy-backend.yml"
   workflow_dispatch:
 
+concurrency:
+  group: deploy-backend-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   AWS_REGION: ${{ vars.AWS_REGION || secrets.AWS_REGION || 'us-west-1' }}
   ECR_REPOSITORY: itg-backend
@@ -21,6 +25,7 @@ jobs:
   deploy:
     name: Build & Deploy Backend
     runs-on: ubuntu-latest
+    timeout-minutes: 45
 
     steps:
       - name: Checkout code
