Limit CI workflows to tracked dirs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,17 @@ name: CI
 on:
   push:
     branches: [main, master]
+    paths:
+      - 'src/**'
+      - 'pages/**'
+      - 'aws/**'
+      - '.github/workflows/**'
   pull_request:
+    paths:
+      - 'src/**'
+      - 'pages/**'
+      - 'aws/**'
+      - '.github/workflows/**'
 
 jobs:
   # ============================================
