Document DNS recovery and env update

--- a/src/.env.example
+++ b/src/.env.example
@@ -19,17 +19,19 @@ DB_PORT=5432
 # AWS_S3_ENDPOINT_URL=
 # AWS_S3_CUSTOM_DOMAIN=
 
-# Email Settings
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=
-EMAIL_HOST_PASSWORD=
-DEFAULT_FROM_EMAIL=noreply@innovatetogrow.com
-
 # Notification Providers
-# Options: console, sendgrid, twilio, etc.
+# Options: console, gmail, smtp
 EMAIL_PROVIDER=console
 SMS_PROVIDER=console
+
+# SMTP Configuration
+# Primary: SMTP credentials are managed via GoogleGmailAccount in the admin panel.
+# Fallback: If no GoogleGmailAccount exists in the database, these env vars are used:
+# EMAIL_SMTP_HOST=smtp.gmail.com
+# EMAIL_SMTP_PORT=587
+# EMAIL_SMTP_USER=your-gmail@gmail.com
+# EMAIL_SMTP_PASS=your-google-app-password
+DEFAULT_FROM_EMAIL=noreply@example.com
 
 # Redis (Optional)
 # REDIS_URL=redis://127.0.0.1:6379/1
